# Acho

./: .mxproject  .project  CMakeLists.txt  DapLink.cfg  Ink-Paper.ioc  README.md  STM32F103VETX_FLASH.ld
Acho/: .cproject  Ink-Paper.ioc  st_nucleo_f103rb.cfg
Acho/Core/Inc/: sdio.h  stm32f1xx_hal_conf.h
Acho/Core/Src/: gpio.c  sdio.c  spi.c  (+1 more)
Acho/Firmware/: CMakeLists.txt
Core/Inc/: FreeRTOSConfig.h  main.h  sdio.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Src/: freertos.c  gpio.c  main.c  spi.c  stm32f1xx_it.c  usart.c
FATFS/App/: fatfs.h
IOTapp/: settings.gradle
IOTapp/app/: build.gradle
IOTapp/app/src/main/cpp/: CMakeLists.txt  main.cpp
IOTapp/app/src/main/cpp/img_transfer/: imgProcess.cpp  imgProcess.h
IOTapp/sdk/: build.gradle
IOTserver/djangoProject/: install_packs.bat  requirements.txt  temp.py  websock_test.py
ImgTransfer/: CMakeLists.txt
ImgTransfer/inc/: filesInfoGet.h  imgProcess.h
ImgTransfer/lib/: img_transfer.lib
ImgTransfer/src/: CMakeLists.txt  filesInfoGet.cpp  imgProcess.cpp  main.cpp  main2.cpp
Lib/Lvgl/: lv_conf.h
Lib/WaveShare1in54v2/: DEV_Config.h  EPD_1in54_V2.c
USB_DEVICE/App/: usbd_storage_if.c
User/Inc/: audio.h  broker_app.h  bsp_key.h  bsp_usart.h  bsp_vs10xx.h  fops.h  gui_setup.h  recorder.h
User/Src/: audio.c  broker_app.c  bsp_delay.c  bsp_ink_paper.c  bsp_key.c  bsp_usart.c  bsp_vs10xx.c  fops.c  gui_setup.c  recorder.c
User/gui_pages/: page_audio.c  page_audio.h  page_bind.c  page_filelist.c  page_main.c  page_main_select.c  page_main_select.h  page_play.c  page_play.h  page_test.c  page_test.h
(+144 files in other folders)
